# SudokuPy

./: 002.bat  003.bat  game.py  guigame.py  pyproject.toml
